add book description form input

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -6,11 +6,14 @@
         <div style="width: 30%; margin: 50px auto;">
             <form action="/books" method="POST">
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Book Name" name="name">
-                </div>
+                    <input class="form-control" type="text" placeholder="Book Title" name="title">
+                </div><!--Title-->
                 <div class="form-group">
                     <input class="form-control" type="text" placeholder="Image URL" name="image">
-                </div>
+                </div><!--image-->
+                <div class="form-group">
+                    <input class="form-control" type="text" placeholder="Description" name="description">
+                </div><!--Description-->
                 <div class="form-group">
                     <input class="btn btn-large btn-primary btn-block" type="submit">
                 </div>
