Refractoring the code

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -14,7 +14,7 @@
             <div class="col-md-3 col-sm-6">
                 <div class="thumbnail">
                     <img src="<%= book.image %>">
-                    <h4 class="caption"><%= book.name %></h4>
+                    <h4 class="caption"><%= book.title %></h4>
                     <p>
                         <a href="/books/<%= book._id %>" class="btn btn-info">More Info</a>
                     </p>
