--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <head>
         <title>Boston Book Trade</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/stylesheet/app.css">
+        <link rel="stylesheet" href="/stylesheets/main.css">
     </head>
     <body>
         <nav class="navbar navbar-default">
@@ -13,15 +13,13 @@
                 </div><!--navbar-header-->
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="/">Login</a>
-                        </li>
-                        <li>
-                            <a href="/">Sign Up</a>
-                        </li>
-                        <li>
-                            <a href="/">Logout</a>
-                        </li>
+                        <% if (!currentUser) { %>
+                            <li><a href="/login">Login</a></li>
+                            <li><a href="/register">Sign Up</a></li>
+                        <% } else { %>
+                            <li><a href="#">Signed in as <%=currentUser.username%></a></li>
+                            <li><a href="/logout">Logout</a></li>
+                        <% } %>
                     </ul>
                 </div>
             </div><!--container-fluid-->
