--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -14,7 +14,7 @@
             <div class="thumbnail">
                 <img class="img-responsive"src="<%= book.image %>">
                 <div class="caption">
-                    <h5 class="pull-right">Goodreads Review</h5>
+                    <h5 class="pull-right">Trade by <a href="#"><%=book.author.username%></a></h5>
                     <h3><%= book.title%></h3>
                     <p>
                         <strong>Description:</strong> <%= book.description %>
@@ -29,7 +29,7 @@
                 <% book.comments.forEach(function(comment) { %>
                     <div class="row">
                         <div class="col-md-12">
-                            <strong><%= comment.author %></strong>
+                            <strong><%= comment.author.username %></strong>
                             <span class="pull-right">10 days ago</span>
                             <p>
                                 <%= comment.text %>
