--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -6,10 +6,7 @@
         <div style="width: 30%; margin: 50px auto;">
             <form action="/books/<%=book._id%>/comments" method="POST">
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Comment" name="comment[text]">
-                </div>
-                <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Author" name="comment[author]">
+                    <textarea class="form-control" type="text" placeholder="Comment" name="comment"></textarea>
                 </div>
                 <div class="form-group">
                     <input class="btn btn-large btn-primary btn-block" type="submit">
