--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,6 +13,7 @@
                 </div><!--navbar-header-->
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/books">Newest Trade</a></li>
                         <% if (!currentUser) { %>
                             <li><a href="/login">Login</a></li>
                             <li><a href="/register">Sign Up</a></li>
