--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -5,9 +5,9 @@
         <div class="col-md-3">
             <p class="lead">Book Categories</p>
             <ul class="list-group">
-                <li class="list-group-item active">Info 1</li>
-                <li class="list-group-item">Info 2</li>
-                <li class="list-group-item">Info 3</li>
+                <li class="list-group-item active">Fiction</li>
+                <li class="list-group-item">Non-Fiction</li>
+                <li class="list-group-item">Biography</li>
             </ul>
         </div><!-- sidebar col-md-3-->
         <div class="col-md-9">
@@ -19,6 +19,12 @@
                     <p>
                         <strong>Description:</strong> <%= book.description %>
                     </p>
+                    <% if (currentUser && book.author.id.equals(currentUser._id)) { %>
+                        <a class="btn btn-warning" href="/books/<%=book._id%>/edit">Edit</a>
+                        <form id="delete-form" action="/books/<%=book._id%>?_method=DELETE" method="POST">
+                            <button class="btn btn-danger">Delete</button>
+                        </form>
+                    <% } %>
                 </div>
             </div><!--book thumbnail-->
             <div class="well">
