--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -2,8 +2,8 @@
 
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center;">Edit "<%=book.title%>"</h1>
-        <div style="width: 30%; margin: 50px auto;">
+        <h1 class="page-heading">Edit "<%=book.title%>"</h1>
+        <div class="form-wrapper">
             <form action="/books/<%=book._id%>?_method=PUT" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" value="<%=book.title%>" name="book[title]">
