--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -2,8 +2,8 @@
 
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center;">Create a new book trade</h1>
-        <div style="width: 30%; margin: 50px auto;">
+        <h1 class="page-heading">Create a new book trade</h1>
+        <div class="form-wrapper">
             <form action="/books" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" placeholder="Book Title" name="title">
