--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -2,8 +2,8 @@
 
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center;">Edit comment</h1>
-        <div style="width: 30%; margin: 50px auto;">
+        <h1 class="page-heading">Edit comment</h1>
+        <div class="form-wrapper">
             <form action="/books/<%=book_id%>/comments/<%=comment._id%>/?_method=PUT" method="POST">
                 <div class="form-group">
                     <textarea class="form-control" type="text" name="comment[text]"><%= comment.text %></textarea>
