--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -2,8 +2,8 @@
 
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center;">Add new comment to <%=book.title%></h1>
-        <div style="width: 30%; margin: 50px auto;">
+        <h1 class="page-heading">Add new comment to <%=book.title%></h1>
+        <div class="form-wrapper">
             <form action="/books/<%=book._id%>/comments" method="POST">
                 <div class="form-group">
                     <textarea class="form-control" type="text" placeholder="Comment" name="comment[text]"></textarea>
