--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,8 +2,8 @@
 
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center;">Sign Up</h1>
-        <div style="width: 30%; margin: 50px auto;">
+        <h1 class="page-heading">Sign Up</h1>
+        <div class="form-wrapper">
             <form action="/register" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="username" placeholder="Username">
