--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,27 @@
-        <div class="container text-center">
-             <p>Copyright 2018 Boston Book Trade</p>   
-        </div>
+        <footer class="container-fluid">
+                <div class="row">
+                        <div class="col-md-4">
+                                <nav class="nav">
+                                        <ul class="footer-nav">
+                                             <li><a href="#">About Us</a></li>
+                                             <li><a href="#">Terms & Conditions</a></li>
+                                             <li><a href="#">Sponsor</a></li>
+                                         </ul>
+                                     </nav> 
+                        </div>
+                        <div class="col-md-4">
+                                <div class="copyright">
+                                        <p>Copyright &copy; 2018 Boston Book Trade</p>  
+                                </div> 
+                        </div>
+                        <div class="col-md-4">
+                                <ul class="social">
+                                        <li><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                </ul>
+                        </div>
+                </div>
+        </footer>
     </body>
 </html>
