--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,20 +1,22 @@
 <% include ./partials/header %>
 
-<div class="container">
-    <div class="row">
-        <h1 class="page-heading">Sign Up</h1>
-        <div class="form-wrapper">
-            <form action="/register" method="POST">
-                <div class="form-group">
-                    <input class="form-control" type="text" name="username" placeholder="Username">
-                </div>
-                <div class="form-group">
-                    <input class="form-control" type="password" name="password" placeholder="Password">
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-large btn-primary btn-block">Sign Up</button>
-                </div>
-            </form>
+<div class="single-page-wrapper">
+    <div class="container">
+        <div class="row">
+            <h1 class="page-heading">Sign Up</h1>
+            <div class="form-wrapper">
+                <form action="/register" method="POST">
+                    <div class="form-group">
+                        <input class="form-control" type="text" name="username" placeholder="Username">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="password" name="password" placeholder="Password">
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-large btn-primary btn-block">Sign Up</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
