updated brand link

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,29 +3,41 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Boston Book Trade</title>
+        <link rel="icon" href="/images/bbt-icon.png" type="image/gif" sizes="16x16">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Oswald:700|Poppins:400,600,700" rel="stylesheet">
         <link rel="stylesheet" href="/stylesheets/main.css">
     </head>
     <body>
         <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="/">Boston Book Trade</a>
-                </div><!--navbar-header-->
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/books">Newest Trade</a></li>
-                        <% if (!currentUser) { %>
-                            <li><a href="/login">Login</a></li>
-                            <li><a href="/register">Sign Up</a></li>
-                        <% } else { %>
-                            <li><a href="#">Signed in as <%=currentUser.username%></a></li>
-                            <li><a href="/logout">Logout</a></li>
-                        <% } %>
-                    </ul>
-                </div>
-            </div><!--container-fluid-->
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <button class="brand-logo">
+                  <a href="/"><img class="logo" src="/images/bbt-icon.png"> Boston Book Trade</a>
+              </button>
+            </div>
+        
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav navbar-right">
+                    <% if (!currentUser) { %>
+                        <li><a href="/login">Login</a></li>
+                        <li><a href="/register">Sign Up</a></li>
+                    <% } else { %>
+                        <li><a href="#">Signed in as <%=currentUser.username%></a></li>
+                        <li><a href="/logout">Logout</a></li>
+                    <% } %>
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
         </nav>
         
         <div class="container">
