--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,57 +1,58 @@
 <% include ../partials/header %>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-3">
-            <p class="lead">Book Categories</p>
-            <ul class="list-group">
-                <li class="list-group-item active">Fiction</li>
-                <li class="list-group-item">Non-Fiction</li>
-                <li class="list-group-item">Biography</li>
-            </ul>
-        </div><!-- sidebar col-md-3-->
-        <div class="col-md-9">
-            <div class="thumbnail">
-                <img class="img-responsive"src="<%= book.image %>">
-                <div class="caption">
-                    <h5 class="pull-right">Trade by <a href="#"><%=book.author.username%></a></h5>
-                    <h3><%= book.title%></h3>
-                    <p>
-                        <strong>Description:</strong> <%= book.description %>
-                    </p>
-                    <% if (currentUser && book.author.id.equals(currentUser._id)) { %>
-                        <a class="btn btn-warning" href="/books/<%=book._id%>/edit">Edit</a>
-                        <form class="delete-form" action="/books/<%=book._id%>?_method=DELETE" method="POST">
-                            <button class="btn btn-danger">Delete</button>
-                        </form>
-                    <% } %>
-                </div>
-            </div><!--book thumbnail-->
-            <div class="well">
-                <div class="text-right">
-                    <a class="btn btn-success" href="/books/<%= book._id %>/comments/new">Add comment</a>
-                </div>
-                <hr>
-                <% book.comments.forEach(function(comment) { %>
-                    <div class="row">
-                        <div class="col-md-12 single-book-comment-card">
-                            <strong><%= comment.author.username %></strong>
-                            <span class="pull-right">10 days ago</span>
-                            <p>
-                                <%= comment.text %>
-                            </p>
-                            <% if (currentUser && comment.author.id.equals(currentUser._id)) { %>
-                                <a class="btn btn-xs btn-warning" href="/books/<%=book._id%>/comments/<%=comment._id%>/edit">Edit</a>
-                                <form class="delete-form" action="/books/<%=book._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
-                                    <button class="btn btn-xs btn-danger">Delete</button>
-                                </form>
-                            <% } %>
-                        </div>
+<div class="single-book-wrapper">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <p class="lead">Book Categories</p>
+                <ul class="list-group">
+                    <li class="list-group-item active">Fiction</li>
+                    <li class="list-group-item">Non-Fiction</li>
+                    <li class="list-group-item">Biography</li>
+                </ul>
+            </div><!-- sidebar col-md-3-->
+            <div class="col-md-9">
+                <div class="thumbnail">
+                    <img class="img-responsive"src="<%= book.image %>">
+                    <div class="caption">
+                        <h5 class="pull-right">Trade by <a href="#"><%=book.author.username%></a></h5>
+                        <h3><%= book.title%></h3>
+                        <p>
+                            <strong>Description:</strong> <%= book.description %>
+                        </p>
+                        <% if (currentUser && book.author.id.equals(currentUser._id)) { %>
+                            <a class="btn btn-warning" href="/books/<%=book._id%>/edit">Edit</a>
+                            <form class="delete-form" action="/books/<%=book._id%>?_method=DELETE" method="POST">
+                                <button class="btn btn-danger">Delete</button>
+                            </form>
+                        <% } %>
                     </div>
-                <% }) %>
-            </div><!--comments-->
-        </div><!--content col-md-9-->
-    </div><!--row-->
-</div><!--container-->
-
+                </div><!--book thumbnail-->
+                <div class="well">
+                    <div class="text-right">
+                        <a class="btn btn-tertiary" href="/books/<%= book._id %>/comments/new">Add comment</a>
+                    </div>
+                    <hr>
+                    <% book.comments.forEach(function(comment) { %>
+                        <div class="row">
+                            <div class="col-md-12 single-book-comment-card">
+                                <strong><%= comment.author.username %></strong>
+                                <span class="pull-right">10 days ago</span>
+                                <p>
+                                    <%= comment.text %>
+                                </p>
+                                <% if (currentUser && comment.author.id.equals(currentUser._id)) { %>
+                                    <a class="btn btn-xs btn-warning" href="/books/<%=book._id%>/comments/<%=comment._id%>/edit">Edit</a>
+                                    <form class="delete-form" action="/books/<%=book._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
+                                        <button class="btn btn-xs btn-danger">Delete</button>
+                                    </form>
+                                <% } %>
+                            </div>
+                        </div>
+                    <% }) %>
+                </div><!--comments-->
+            </div><!--content col-md-9-->
+        </div><!--row-->
+    </div><!--container-->
+</div>
 <% include ../partials/footer %>
