--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,24 +1,26 @@
 <% include ../partials/header %>
 
-<div class="container">
-    <div class="row">
-        <h1 class="page-heading">Create a new book trade</h1>
-        <div class="form-wrapper">
-            <form action="/books" method="POST">
-                <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Book Title" name="title">
-                </div><!--Title-->
-                <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Image URL" name="image">
-                </div><!--image-->
-                <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Description" name="description">
-                </div><!--Description-->
-                <div class="form-group">
-                    <input class="btn btn-large btn-primary btn-block" type="submit">
-                </div>
-            </form>
-            <a href="/books">Go Back</a>
+<div class="single-page-wrapper">
+    <div class="container">
+        <div class="row">
+            <h1 class="page-heading">Create a new book trade</h1>
+            <div class="form-wrapper">
+                <form action="/books" method="POST">
+                    <div class="form-group">
+                        <input class="form-control" type="text" placeholder="Book Title" name="title">
+                    </div><!--Title-->
+                    <div class="form-group">
+                        <input class="form-control" type="text" placeholder="Image URL" name="image">
+                    </div><!--image-->
+                    <div class="form-group">
+                        <input class="form-control" type="text" placeholder="Description" name="description">
+                    </div><!--Description-->
+                    <div class="form-group">
+                        <input class="btn btn-large btn-primary btn-block" type="submit">
+                    </div>
+                </form>
+                <a href="/books">Go Back</a>
+            </div>
         </div>
     </div>
 </div>
